--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -33,6 +33,7 @@
 
     #aside-left {
         .make-md-column(3);
+        .make-md-column-pull(9);
     }
 
     #main {
@@ -42,6 +43,7 @@
 
     #aside-right {
         .make-md-column(3);
+        .make-md-column-push(9);
         font-size: 18px;
         font-style: italic;
     }
