--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -19,6 +19,7 @@
         .make-row();
         .make-md-column(10);
         .make-md-column-offset(1);
+        margin: 0;
         padding-top: 10px;
     }
 
