--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -220,7 +220,9 @@ footer {
         }
         @media (max-width: @screen-sm-max) {
             .menu-bookend();
-            border-left: 0;
+            @media (min-width: @screen-sm-min) {
+                border-left: 0;
+            }
         }
         @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
             line-height: 20px;
