--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -22,6 +22,7 @@
                 data-l-center="[{{ lot.centroid.y }}, {{ lot.centroid.x }}]"
                 data-l-apikey="{% inplace_setting PLACES_CLOUDMADE_KEY %}"
                 data-l-styleid="{% inplace_setting PLACES_CLOUDMADE_STYLE %}"
+                data-l-scroll-wheel-zoom="false"
                 data-l-zoom-control="false"
                 data-l-lotsurl="{% url "lots:lot_geojson_polygon" %}"
                 data-l-lot-pk="{{ lot.pk }}"
