--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -110,9 +110,13 @@
                                     </ul>
                                 </ul>
                                 <ul>
+                                    <li class="map-filters-type-item map-filters-type-in-use">
+                                        <input type="checkbox" name="in_use" class="filter filter-layer hidden" />
+                                        {% trans "green space" %}
+                                        (<span id="in-use-count"></span>)
+                                    </li>
                                     <li>{% trans "being organized" %}</li>
-                                    <li>{% trans "garden/farm/nursery" %}</li>
-                                    <li>{% trans "park/greenspace/forest" %}</li>
+                                    <li>{% trans "friendly owner" %}</li>
                                 </ul>
                             </ul>
                         </div>
