Variables for lot layer colors

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4374,19 +4374,19 @@ form .btn-primary .badge {
   color: #999933;
 }
 .map-filters-type-public {
-  color: #A9756D;
+  color: #a9756d;
 }
 .map-filters-type-public-remnant {
-  color: #8C474D;
+  color: #8c474d;
 }
 .map-filters-type-public-sidelot {
-  color: #A9746E;
+  color: #a9746e;
 }
 .map-filters-type-private {
-  color: #D4A7D4;
+  color: #d4a7d4;
 }
 .map-filters-type-private-tax-default {
-  color: #9A649E;
+  color: #9a649e;
 }
 .map-filters-councildistricts {
   margin-left: 3%;
