--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -132,27 +132,27 @@
     }
 
     &-in-use {
-        color: #999933;
+        color: @in-use-color;
     }
 
     &-public {
-        color: #A9756D;
+        color: @public-color;
     }
 
     &-public-remnant {
-        color: #8C474D;
+        color: @public-remnant-color;
     }
 
     &-public-sidelot {
-        color: #A9746E;
+        color: @public-sidelot-color;
     }
 
     &-private {
-        color: #D4A7D4;
+        color: @private-color;
     }
 
     &-private-tax-default {
-        color: #9A649E;
+        color: @private-tax-default-color;
     }
 
 }
