--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -1,3 +1,12 @@
+// Global fonts
+@body-font-family: "Times New Roman", serif; 
+@header-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+
+
+// Page frame
+@frame-border: 1px solid #aaa;
+
+
 // Lot layer colors
 @in-use-color: #999933;
 @public-color: #A9756D;
