Latest lot layer colors

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4374,19 +4374,19 @@ form .btn-primary .badge {
   color: #999933;
 }
 .map-filters-type-public {
-  color: #a9756d;
+  color: #990000;
 }
 .map-filters-type-public-remnant {
-  color: #8c474d;
+  color: #993333;
 }
 .map-filters-type-public-sidelot {
-  color: #a9746e;
+  color: #996666;
 }
 .map-filters-type-private {
-  color: #d4a7d4;
+  color: #663366;
 }
 .map-filters-type-private-tax-default {
-  color: #9a649e;
+  color: #996699;
 }
 .map-filters-councildistricts {
   margin-left: 3%;
