--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -9,8 +9,9 @@
 
 // Lot layer colors
 @in-use-color: #999933;
-@public-color: #A9756D;
-@public-remnant-color: #8C474D;
-@public-sidelot-color: #A9746E;
-@private-color: #D4A7D4;
-@private-tax-default-color: #9A649E;
+@public-color: #990000;
+@public-remnant-color: #993333;
+@public-sidelot-color: #996666;
+@private-color: #663366;
+@private-ab-551-color: #CC99CC;
+@private-tax-default-color: #996699;
