--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -73,7 +73,7 @@
                 <h2 class="map-filters-expander">{% trans "filter" %}</h2>
                 <section class="map-filters-content">
                     <section class="map-filters">
-                        <h3 class="map-filters-expander">{% trans "type" %}</h3>
+                        <h3 class="map-filters-expander">{% trans "land access pathways" %}</h3>
                         <div class="map-filters-content">
                             <ul class="map-filters-type">
                                 <ul>
