--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -160,12 +160,14 @@
 }
 
 .map-filters-councildistricts {
+    font-family: @body-font-family;
+    font-size: 14px;
     margin-left: 3%;
 
     .map-filters-councildistrict {
         display: block;
         text-align: center;
-        width: 20%;
+        width: 15%;
     }
 }
 
