--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -148,8 +148,16 @@
         width: 10px;
     }
 
+    &-friendly-owner {
+        .make-map-filters-type-item(@friendly-owner-color);
+    }
+
     &-in-use {
         .make-map-filters-type-item(@in-use-color);
+    }
+
+    &-organized {
+        .make-map-filters-type-item(@organized-color);
     }
 
     &-public {
