--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -8,7 +8,9 @@
 
 
 // Lot layer colors
+@friendly-owner-color: #663300;
 @in-use-color: #999933;
+@organized-color: #FF00FF;
 @public-color: #990000;
 @public-remnant-color: #993333;
 @public-sidelot-color: #996666;
