--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -150,6 +150,10 @@
 
     &-friendly-owner {
         .make-map-filters-type-item(@friendly-owner-color);
+
+        .friendly-owner-share {
+            font-size: 12px;
+        }
     }
 
     &-in-use {
