--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -132,6 +132,10 @@
                                         <input type="checkbox" name="friendly_owner" class="filter filter-layer hidden" />
                                         {% trans "friendly owner" %}
                                         (<span id="friendly-owner-count">0</span>)
+                                        <div>
+                                            <a class="friendly-owner-share" href="#">
+                                                {% trans "I own land I'd like to share" %}
+                                            </a>
                                     </li>
                                 </ul>
                             </ul>
