--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -101,6 +101,17 @@
         margin-left: 8%;
         width: 92%;
     }
+    &-search-nearby {
+        label {
+            font-family: @body-font-family;
+            font-size: 12px;
+            font-weight: normal;
+        }
+        input[type="checkbox"] {
+            margin-left: 8%;
+            width: 20px;
+        }
+    }
 }
 
 .make-map-filters-type-item(@color) {
