--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -54,13 +54,16 @@
         border: none;
         margin: 0;
         overflow-y: auto;
-        padding-bottom: 5px;
         padding-left: 15px;
         padding-right: 15px;
         padding-top: 5px;
         z-index: 5000;
         &.expanded {
             height: 100%;
+        }
+
+        h2 {
+            margin-top: 10px;
         }
     }
 
