Navbar hover underline

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -143,6 +143,10 @@ header .row {
         padding-right: 8px;
         text-decoration: none;
         text-transform: uppercase;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
     &.overflowing {
         .navbar-nav > li > a {
