--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3902,6 +3902,9 @@ header .row {
   text-decoration: none;
   text-transform: uppercase;
 }
+.navbar-default .navbar-nav > li > a:hover {
+  text-decoration: underline;
+}
 .navbar-default.overflowing .navbar-nav > li > a {
   padding-left: 4px;
   padding-right: 4px;
