--- a/livinglotsla/templates/watson/search_results.html
+++ b/livinglotsla/templates/watson/search_results.html
@@ -16,10 +16,10 @@
         {% search_results search_results %}
     {% else %}
         {% if query %}
-            <p><em>There are no results to display.</em></p>
-            <p><em>Try entering a less specific search term.</em></p>
+            <p>There are no results to display.</p>
+            <p>Try entering a less specific search term.</p>
         {% else %}
-            <p><em>Please enter a query in the search form.</em></p>
+            <p>Please enter a query in the search form.</p>
         {% endif %}
     {% endif %}
 {% endblock %}
