--- a/livinglotsla/static/css/overrides/bootstrap.less
+++ b/livinglotsla/static/css/overrides/bootstrap.less
@@ -37,6 +37,7 @@
 .form-control {
     border-radius: 0;
     font-size: 22px;
+    font-style: italic;
     height: 40px;
     padding: 6px 6px;
 }
