--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4837,6 +4837,18 @@ form .btn-primary .badge {
 .lot-detail-page .modal .close:focus {
   outline: none;
 }
+#organizer-modal input[type="checkbox"] {
+  display: none;
+}
+#organizer-modal input[type="checkbox"] + label .checkbox-x {
+  border: 1px solid white;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+}
+#organizer-modal input[type="checkbox"]:checked + label .checkbox-x {
+  background: url("/static/img/checkbox-x.png");
+}
 .search-highlight {
   font-weight: bold;
 }
