--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4296,11 +4296,13 @@ form .btn-primary .badge {
 .map-filters#map-filters-parent {
   position: relative;
   min-height: 1px;
+  padding-right: 15px;
   border: none;
   margin: 0;
-  overflow-y: auto;
+  overflow-x: none;
+  overflow-y: hidden;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 20px;
   padding-top: 5px;
   z-index: 5000;
 }
@@ -4320,6 +4322,24 @@ form .btn-primary .badge {
 }
 .map-filters#map-filters-parent h2 {
   margin-top: 10px;
+}
+.map-filters#map-filters-parent.ps-container .ps-scrollbar-y-rail,
+.map-filters#map-filters-parent.ps-container:hover .ps-scrollbar-y-rail {
+  opacity: 0;
+  background: #F0F0F0;
+  border: 1px solid #D9D9D9;
+  border-radius: 0;
+  right: 0 !important;
+  width: 15px;
+}
+.map-filters#map-filters-parent.ps-container .ps-scrollbar-y-rail .ps-scrollbar-y,
+.map-filters#map-filters-parent.ps-container:hover .ps-scrollbar-y-rail .ps-scrollbar-y {
+  border-radius: 0;
+  width: 100%;
+}
+.map-filters#map-filters-parent.expanded.ps-container .ps-scrollbar-y-rail {
+  opacity: 0.6;
+  filter: alpha(opacity = 60);
 }
 .map-filters-expander {
   cursor: pointer;
