--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -53,9 +53,10 @@
 
         border: none;
         margin: 0;
-        overflow-y: auto;
+        overflow-x: none;
+        overflow-y: hidden;
         padding-left: 15px;
-        padding-right: 15px;
+        padding-right: 20px;
         padding-top: 5px;
         z-index: 5000;
         &.expanded {
@@ -64,6 +65,28 @@
 
         h2 {
             margin-top: 10px;
+        }
+
+        &.ps-container .ps-scrollbar-y-rail,
+        &.ps-container:hover .ps-scrollbar-y-rail {
+            // Hide the scrollbar when collapsed (default)
+            opacity: 0;
+
+            background: #F0F0F0;
+            border: 1px solid #D9D9D9;
+            border-radius: 0;
+            right: 0 !important;
+            width: 15px;
+
+            .ps-scrollbar-y {
+                border-radius: 0;
+                width: 100%;
+            }
+        }
+        &.expanded.ps-container .ps-scrollbar-y-rail {
+            // Show scrollbar
+            opacity: 0.6;
+            filter: ~"alpha(opacity = 60)";
         }
     }
 
