--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4792,6 +4792,7 @@ form .btn-primary .badge {
   background-image-repeat: no-repeat;
   float: left;
   height: 21px;
+  margin-top: 8px;
   width: 24px;
 }
 .lot-detail-legal {
