--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -72,8 +72,10 @@
 }
 
 .note {
-    &-text {
-        font-size: 24px;
+    &-meta {
+        font-family: @header-font-family;
+        font-size: 20px;
+        font-weight: bold;
     }
 }
 
