--- a/livinglotsla/templates/notes/note_list.html
+++ b/livinglotsla/templates/notes/note_list.html
@@ -3,7 +3,7 @@
 <ul class="note-list">
     {% for note in notes %}
         <li class="note-list-item">
-            <div>
+            <div class="note-meta">
                 <span class="note-added">
                     {{ note.added }}
                 </span> |
