--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -1,7 +1,7 @@
 .blog-entry-list {
     article {
         .make-row();
-        .make-md-column(10);
+        .make-md-column(10, 0);
         margin-bottom: 50px;
         margin-left: 0;
         margin-right: 0;
@@ -35,6 +35,7 @@
 .blog-entry {
     &-summary {
         .make-md-column(8);
+        padding-left: 0;
     }
 
     &-cover-image {
