--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -18,6 +18,7 @@
 
     .meta {
         color: gray;
+        font-family: @header-font-family;
         font-size: 12px;
         font-weight: bold;
         margin-bottom: 15px;
