--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -149,6 +149,14 @@ header .row {
             text-decoration: underline;
         }
     }
+
+    .navbar-nav > .active > a {
+        background-color: inherit;
+        color: black;
+        text-decoration: underline;
+    }
+
+
     &.overflowing {
         .navbar-nav > li > a {
             padding-left: 4px;
