--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -60,7 +60,7 @@
             {% if "lots.change_lot" in perms %}
                 <div>
                     <a class="btn btn-admin" href="{% url "admin:lots_lot_change" lot.pk %}">
-                        {% trans "Edit this lot" %}
+                        {% trans "edit this lot" %}
                     </a>
                 </div>
             {% endif %}
