--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -8,7 +8,7 @@
 .map-overlay {
     background: @map-overlay-background;
 
-    a {
+    #map-filters a {
         color: black;
         text-decoration: underline;
     }
