--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -14,6 +14,49 @@
     }
 }
 
+#map-sidebar-parent {
+    .make-sm-column(3);
+    .make-sm-column-offset(9);
+
+    border: none;
+    margin: 0;
+    overflow-x: none;
+    overflow-y: hidden;
+    padding-left: 15px;
+    padding-right: 20px;
+    padding-top: 5px;
+    z-index: 5000;
+    &.expanded {
+        height: 100%;
+    }
+
+    h2 {
+        margin-top: 10px;
+    }
+
+    &.ps-container .ps-scrollbar-y-rail,
+    &.ps-container:hover .ps-scrollbar-y-rail {
+        // Hide the scrollbar when collapsed (default)
+        opacity: 0;
+
+        background: #F0F0F0;
+        border: 1px solid #D9D9D9;
+        border-radius: 0;
+        right: 0 !important;
+        width: 15px;
+
+        .ps-scrollbar-y {
+            border-radius: 0;
+            width: 100%;
+        }
+    }
+    &.expanded.ps-container .ps-scrollbar-y-rail {
+        // Show scrollbar
+        opacity: 0.6;
+        filter: ~"alpha(opacity = 60)";
+    }
+}
+
 .map-filters-wrapper {
     .make-row(0);
     .make-sm-column(10);
@@ -33,6 +76,10 @@
     margin-bottom: 15px;
     margin-top: 15px;
 
+    &:first-child {
+        border-top: none;
+    }
+
     h2 {
         font-size: 24px;
     }
@@ -45,49 +92,6 @@
         font-size: 14px;
         font-family: @body-font-family;
         font-weight: normal;
-    }
-
-    &#map-filters-parent {
-        .make-sm-column(3);
-        .make-sm-column-offset(9);
-
-        border: none;
-        margin: 0;
-        overflow-x: none;
-        overflow-y: hidden;
-        padding-left: 15px;
-        padding-right: 20px;
-        padding-top: 5px;
-        z-index: 5000;
-        &.expanded {
-            height: 100%;
-        }
-
-        h2 {
-            margin-top: 10px;
-        }
-
-        &.ps-container .ps-scrollbar-y-rail,
-        &.ps-container:hover .ps-scrollbar-y-rail {
-            // Hide the scrollbar when collapsed (default)
-            opacity: 0;
-
-            background: #F0F0F0;
-            border: 1px solid #D9D9D9;
-            border-radius: 0;
-            right: 0 !important;
-            width: 15px;
-
-            .ps-scrollbar-y {
-                border-radius: 0;
-                width: 100%;
-            }
-        }
-        &.expanded.ps-container .ps-scrollbar-y-rail {
-            // Show scrollbar
-            opacity: 0.6;
-            filter: ~"alpha(opacity = 60)";
-        }
     }
 
     &-expander {
@@ -368,5 +372,14 @@
             max-width: 100%;
             width: 100%;
         }
+    }
+}
+
+.map-add-lot-mode-container {
+    h1 {
+        font-size: 18px;
+    }
+    .btn {
+        color: white;
     }
 }
